--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="dimen_font_10">10sp</dimen>
+    <dimen name="dimen_font_12">12sp</dimen>
+    <dimen name="dimen_font_14">14sp</dimen>
+    <dimen name="dimen_font_16">16sp</dimen>
+    <dimen name="dimen_font_18">18sp</dimen>
+
+    <dimen name="dimen_progressbar_size">25dp</dimen>
+    <dimen name="dimen_tab_height">50dp</dimen>
+    <dimen name="dimen_edit_padding_left">10dp</dimen>
+    <dimen name="dimen_edit_padding_top">15dp</dimen>
 </resources>
